--- a/index.html
+++ b/index.html
@@ -10,51 +10,57 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<nav class="navbar">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a href="" class="nav-link">
-                <i class="fas fa-cat"></i>
-                <span class="link-text">Cats</span>
-            </a>
-        </li>
-    </ul>
-</nav>
-
-<main>
-    <h1>Animated Responsive Navbar with CSS...</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati aliquam qui nobis, voluptatum minima
-        similique, ratione dolor maiores eveniet laudantium, in delectus deserunt animi perspiciatis nostrum
-        reiciendis. Qui, nisi laborum? Minima eum, deserunt in quo harum cum dolorum cupiditate distinctio
-        exercitationem, facilis suscipit similique beatae odio hic tempora excepturi, obcaecati optio id atque!
-        Facilis consequatur dolorum deserunt consequuntur? Aliquid qui molestiae quo fuga quidem, veritatis
-        aspernatur unde aperiam cum quia dolorum impedit dignissimos architecto. Dicta sapiente quae atque id sed,
-        fuga, necessitatibus perspiciatis odit doloremque veniam aspernatur nam quisquam temporibus maiores
-        obcaecati consequuntur eius amet rem quam libero deserunt accusamus vitae ipsum repellat. Ipsa provident
-        delectus earum! Ipsum ut rem vero optio, ullam magnam atque debitis animi dolores possimus dolorem,
-        provident repellendus soluta. Dicta tenetur reprehenderit ut molestiae quasi commodi quae aperiam iusto, eum
-        veritatis exercitationem accusantium quam sunt id doloribus deserunt sequi unde dolorum incidunt officia
-        voluptates repudiandae cum nisi. Quas tempore cum fugit distinctio quibusdam nihil non magnam porro, dolor
-        minus vitae, expedita nesciunt quod? At praesentium neque, cum ut officiis ducimus accusantium excepturi,
-        magni odit sit impedit quia et laborum illo amet. Illum vitae sapiente vero earum quod aspernatur molestiae,
-        a tempora illo temporibus reiciendis eaque mollitia fuga ipsum enim ut hic quos, voluptate, exercitationem
-        neque sequi voluptatem officia quis veniam. At veritatis amet tempore voluptatum odio inventore fuga
-        laudantium molestias dolorum! Vitae similique corporis hic laudantium aspernatur corrupti, voluptatem
-        quaerat dolore nam tenetur enim cum, totam dolor. Rerum, illo. Ex, eligendi! Fuga enim incidunt est, totam
-        ipsum officiis laudantium nemo neque esse aspernatur nulla odit suscipit, similique culpa labore beatae?
-        Nemo cupiditate minima harum ratione sed ut error autem! Quidem fugiat cupiditate soluta ex quaerat non
-        cumque ut sequi assumenda aut, blanditiis dolorum magnam modi, eius vel nesciunt et ad distinctio! Adipisci
-        commodi architecto accusantium natus provident iusto pariatur, nesciunt ullam eaque consectetur quas
-        explicabo nam odio quo vel ex obcaecati, veritatis impedit eius fugiat, accusamus omnis itaque
-        exercitationem. Recusandae quia et quaerat commodi vel. Assumenda voluptas et, facilis ducimus dignissimos
-        aliquid quaerat, quis tenetur ex commodi possimus explicabo eligendi eaque esse velit provident! Unde
-        quisquam consequatur tempore eum atque quo ex a voluptas vero fuga distinctio inventore fugit dolor labore,
-        cumque ipsum animi harum? Tempora aliquid nulla unde aperiam ad modi architecto ullam ab expedita
-        voluptatum, maxime repellendus. Praesentium, obcaecati quisquam. Cupiditate accusamus quia quas doloribus
-        impedit laborum, recusandae dolorum, voluptatum eveniet alias, quisquam facilis?</p>
-</main>
 
 <body>
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="" class="nav-link">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="cat"
+                        class="svg-inline--fa fa-cat fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512">
+                        <path fill="currentColor"
+                            d="M290.59 192c-20.18 0-106.82 1.98-162.59 85.95V192c0-52.94-43.06-96-96-96-17.67 0-32 14.33-32 32s14.33 32 32 32c17.64 0 32 14.36 32 32v256c0 35.3 28.7 64 64 64h176c8.84 0 16-7.16 16-16v-16c0-17.67-14.33-32-32-32h-32l128-96v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V289.86c-10.29 2.67-20.89 4.54-32 4.54-61.81 0-113.52-44.05-125.41-102.4zM448 96h-64l-64-64v134.4c0 53.02 42.98 96 96 96s96-42.98 96-96V32l-64 64zm-72 80c-8.84 0-16-7.16-16-16s7.16-16 16-16 16 7.16 16 16-7.16 16-16 16zm80 0c-8.84 0-16-7.16-16-16s7.16-16 16-16 16 7.16 16 16-7.16 16-16 16z">
+                        </path>
+                    </svg>
+                    <span class="link-text">Cats</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Animated Responsive Navbar with CSS...</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati aliquam qui nobis, voluptatum minima
+            similique, ratione dolor maiores eveniet laudantium, in delectus deserunt animi perspiciatis nostrum
+            reiciendis. Qui, nisi laborum? Minima eum, deserunt in quo harum cum dolorum cupiditate distinctio
+            exercitationem, facilis suscipit similique beatae odio hic tempora excepturi, obcaecati optio id atque!
+            Facilis consequatur dolorum deserunt consequuntur? Aliquid qui molestiae quo fuga quidem, veritatis
+            aspernatur unde aperiam cum quia dolorum impedit dignissimos architecto. Dicta sapiente quae atque id sed,
+            fuga, necessitatibus perspiciatis odit doloremque veniam aspernatur nam quisquam temporibus maiores
+            obcaecati consequuntur eius amet rem quam libero deserunt accusamus vitae ipsum repellat. Ipsa provident
+            delectus earum! Ipsum ut rem vero optio, ullam magnam atque debitis animi dolores possimus dolorem,
+            provident repellendus soluta. Dicta tenetur reprehenderit ut molestiae quasi commodi quae aperiam iusto, eum
+            veritatis exercitationem accusantium quam sunt id doloribus deserunt sequi unde dolorum incidunt officia
+            voluptates repudiandae cum nisi. Quas tempore cum fugit distinctio quibusdam nihil non magnam porro, dolor
+            minus vitae, expedita nesciunt quod? At praesentium neque, cum ut officiis ducimus accusantium excepturi,
+            magni odit sit impedit quia et laborum illo amet. Illum vitae sapiente vero earum quod aspernatur molestiae,
+            a tempora illo temporibus reiciendis eaque mollitia fuga ipsum enim ut hic quos, voluptate, exercitationem
+            neque sequi voluptatem officia quis veniam. At veritatis amet tempore voluptatum odio inventore fuga
+            laudantium molestias dolorum! Vitae similique corporis hic laudantium aspernatur corrupti, voluptatem
+            quaerat dolore nam tenetur enim cum, totam dolor. Rerum, illo. Ex, eligendi! Fuga enim incidunt est, totam
+            ipsum officiis laudantium nemo neque esse aspernatur nulla odit suscipit, similique culpa labore beatae?
+            Nemo cupiditate minima harum ratione sed ut error autem! Quidem fugiat cupiditate soluta ex quaerat non
+            cumque ut sequi assumenda aut, blanditiis dolorum magnam modi, eius vel nesciunt et ad distinctio! Adipisci
+            commodi architecto accusantium natus provident iusto pariatur, nesciunt ullam eaque consectetur quas
+            explicabo nam odio quo vel ex obcaecati, veritatis impedit eius fugiat, accusamus omnis itaque
+            exercitationem. Recusandae quia et quaerat commodi vel. Assumenda voluptas et, facilis ducimus dignissimos
+            aliquid quaerat, quis tenetur ex commodi possimus explicabo eligendi eaque esse velit provident! Unde
+            quisquam consequatur tempore eum atque quo ex a voluptas vero fuga distinctio inventore fugit dolor labore,
+            cumque ipsum animi harum? Tempora aliquid nulla unde aperiam ad modi architecto ullam ab expedita
+            voluptatum, maxime repellendus. Praesentium, obcaecati quisquam. Cupiditate accusamus quia quas doloribus
+            impedit laborum, recusandae dolorum, voluptatum eveniet alias, quisquam facilis?</p>
+    </main>
 
 </body>
 
